--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -17,6 +17,10 @@
   padding: 0px 20px;
   transition: all .35s ease;
 }
+.blogPostImgContainer {
+  padding: 0px;
+  max-width: 980px;
+}
 #blogPostBottomSection {
   max-width: 693px;
   padding: 0px 20px;
@@ -173,6 +177,9 @@
     max-width: 616px;
     line-height: 24px;
   }
+  .blogPostImgContainer {
+    max-width: 692px;
+  }
   #blogPostShareTitle {
     font-size: 16px;
     margin-top: 36px;
@@ -236,6 +243,9 @@
   .blogPost,
   #blogPostBottomSection {
     max-width: 402px;
+  }
+  .blogPostImgContainer {
+    max-width: 414px;
   }
   #blogPostTitle {
     font-size: 29px;
