--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -14,7 +14,7 @@
   font-weight: 300;
   max-width: 693px;
   line-height: 27px;
-  padding: 0px 20px;
+  padding: 0px 20px 27px;
   transition: all .35s ease;
 }
 .blogPostImgContainer {
@@ -33,7 +33,7 @@
 #blogPostShareTitle {
   font-size: 18px;
   font-weight: 450;
-  margin-top: 44px;
+  margin-top: 17px;
   line-height: 23px;
   margin-bottom: 8px;
   color: rgb(29, 29, 31);
@@ -180,13 +180,14 @@
     font-weight: 300;
     max-width: 616px;
     line-height: 24px;
+    padding: 0px 20px 24px;
   }
   .blogPostImgContainer {
     max-width: 692px;
   }
   #blogPostShareTitle {
     font-size: 16px;
-    margin-top: 36px;
+    margin-top: 12px;
   }
   #blogPostTopic {
     margin: 36px 0px;
@@ -256,7 +257,7 @@
     line-height: 36px;
   }
   #blogPostShareTitle {
-    margin-top: 32px;
+    margin-top: 8px;
   }
   #blogPostTopic {
     margin: 32px 0px;
