--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -44,6 +44,9 @@
   min-height: 170px;
   position: relative;
 }
+#labelPagePost1, #labelPagePost2, #labelPagePost3, #labelPagePost4, #labelPagePost5, #labelPagePost6, #labelPagePost7, #labelPagePost8, #labelPagePost9 {
+  margin-top: 36px;
+}
 /* 螢幕小於 991.98 */
 @media only screen and (max-width: 991.98px) {
   #labelPageContainer {
@@ -67,6 +70,12 @@
     font-weight: 500;
     line-height: 23px;
   }
+  #labelPagePost1 {
+    margin-top: 0px;
+  }
+  #labelPagePost2, #labelPagePost3, #labelPagePost4, #labelPagePost5, #labelPagePost6, #labelPagePost7, #labelPagePost8, #labelPagePost9 {
+    margin-top: 24px;
+  }
 }
 /* 螢幕小於 767.98 */
 @media (max-width: 767.98px) {
@@ -84,5 +93,8 @@
   #labelPageFirstPostImgContainer,
   .labelPagePostImgContainer {
     min-height: 158px;
+  }
+  #labelPagePost1 {
+    margin-top: 24px;
   }
 }
