--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -31,6 +31,13 @@
   line-height: 20px;
   color: rgb(110, 110, 115);
 }
+#searchPageResultEndText {
+  font-size: 17px;
+  margin: 60px 0px;
+  font-weight: 400;
+  line-height: 25px;
+  color: rgb(29, 29, 31);
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #searchPageContainer {
@@ -72,5 +79,8 @@
   }
   .searchPagePostDate {
     line-height: 18px;
+  }
+  #searchPageResultEndText {
+    margin: 13px 0px 45px;
   }
 }
