--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -39,7 +39,7 @@
   color: rgb(29, 29, 31);
 }
 #searchPageResultNone {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 400;
   line-height: 48px;
   color: rgb(29, 29, 31);
@@ -66,7 +66,8 @@
     line-height: 25px;
   }
   #searchPageResultNone {
-    font-size: 32px;
+    font-size: 28px;
+    font-weight: 300;
     line-height: 40px;
   }
 }
@@ -94,7 +95,7 @@
     margin: 45px 0px;
   }
   #searchPageResultNone {
-    font-size: 28px;
+    font-size: 24px;
     line-height: 36px;
   }
 }
