--- a/Styles/Archive.css
+++ b/Styles/Archive.css
@@ -47,6 +47,7 @@
 .archivePagePostImg {
   width: 295px;
   border-radius: 16px;
+  background-color: rgb(250, 250, 250);
 }
 .archivePagePostTextContainer {
   margin-left: 32px;
