--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -14,6 +14,7 @@
 .searchPagePostImg {
   width: 295px;
   border-radius: 16px;
+  background-color: rgb(250, 250, 250);
 }
 .searchPagePostTextContainer {
   margin-left: 32px;
