--- a/Styles/Archive.css
+++ b/Styles/Archive.css
@@ -80,6 +80,11 @@
   line-height: 25px;
   color: rgb(29, 29, 31);
 }
+#archivePageProgressView {
+  z-index: 1022;
+  color: rgb(0, 102, 204);
+  background-color: rgba(255, 255, 255, 0.8);
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #archiveFilterContainer,
