--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -15,14 +15,18 @@
   font-weight: 300;
   max-width: 693px;
   line-height: 27px;
-  padding: 0px 20px 11px;
+  padding: 0px 20px 0px;
   transition: all .35s ease;
+}
+p {
+  margin-bottom: 27px;
 }
 /* 文章中的程式碼區塊 */
 .codeBlock {
   color: black;
   padding: 8px 14px; 
   line-height: 24px;
+  margin-bottom: 27px;
   border-radius: 15px;
   background-color: rgb(245, 245, 247);
 }
@@ -50,7 +54,7 @@
 #blogPostShareTitle {
   font-size: 18px;
   font-weight: 450;
-  margin-top: 17px;
+  margin-top: 44px;
   line-height: 23px;
   margin-bottom: 8px;
   color: rgb(29, 29, 31);
@@ -199,12 +203,18 @@
     line-height: 24px;
     padding: 0px 20px 8px;
   }
+  p {
+    margin-bottom: 24px;
+  }
+  .codeBlock {
+    margin-bottom: 24px;
+  }
   .blogPostImgContainer {
     max-width: 692px;
   }
   #blogPostShareTitle {
     font-size: 16px;
-    margin-top: 12px;
+    margin-top: 36px;
   }
   #blogPostTopic {
     margin: 36px 0px;
@@ -274,7 +284,7 @@
     line-height: 36px;
   }
   #blogPostShareTitle {
-    margin-top: 8px;
+    margin-top: 32px;
   }
   #blogPostTopic {
     margin: 32px 0px;
