--- a/Styles/Archive.css
+++ b/Styles/Archive.css
@@ -54,6 +54,7 @@
 }
 .archivePagePostImg {
   width: 295px;
+  height: 166px;
   border-radius: 16px;
   background-color: rgb(250, 250, 250);
 }
@@ -101,6 +102,7 @@
   }
   .archivePagePostImg {
     width: 264px;
+    height: 149px;
   }
   .archivePagePostTextContainer {
     margin-left: 24px;
@@ -126,6 +128,7 @@
   }
   .archivePagePostImg {
     width: 106px;
+    height: 60px;
     border-radius: 7px;
   }
   .archivePagePostTitle {
