--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -59,6 +59,21 @@ p {
 .blogPostImg {
   border-radius: 10px;
 }
+.blogPostCaution {
+  padding: 16px;
+  border-radius: 15px;
+  --bs-border-width: 0.87px;
+  --bs-border-color: rgb(158,103,0);
+  background-color: rgb(255, 251, 242);
+  box-shadow: 0 0 1px 0 rgb(158,103,0) inset, 0 0 1px 0 rgb(158,103,0);
+}
+.blogPostCautionTitle {
+  height: 26px;
+  font-weight: 500;
+  line-height: 26px;
+  margin-bottom: 6.8px;
+  color: rgb(158, 103, 0);
+}
 #blogPostBottomSection {
   max-width: 693px;
   padding: 0px 20px;
