--- a/Styles/Page.css
+++ b/Styles/Page.css
@@ -13,6 +13,13 @@
   margin-bottom: 80px;
   color: rgb(29, 29, 31);
 }
+#contactTitle2 {
+  height: 44px;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 44px;
+  color: rgb(29, 29, 31);
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #PageContainer {
@@ -23,6 +30,11 @@
     font-size: 40px;
     line-height: 52px;
   }
+  #contactTitle2 {
+    height: 36px;
+    font-size: 32px;
+    line-height: 36px;
+  }
 }
 /* 螢幕小於 734 */
 @media only screen and (max-width: 734px) {
@@ -32,9 +44,15 @@
   #contactTitle {
     height: 39px;
     margin-left: 0;
-    font-size: 28px;
+    font-size: 32px;
     margin-top: 60px;
+    font-weight: 500;
     line-height: 39px;
     margin-bottom: 60px;
+  }
+  #contactTitle2 {
+    height: 32px;
+    font-size: 28px;
+    line-height: 32px;
   }
 }
