--- a/Styles/Page.css
+++ b/Styles/Page.css
@@ -30,6 +30,16 @@
   margin-bottom: 11.2px;
   color: rgb(29, 29, 31);
 }
+#sitemapTitle {
+  height: 24px;
+  margin: 14px 0;
+  font-size: 19px;
+  font-weight: 500;
+  line-height: 24px;
+}
+#sitemapContainer {
+  margin-top: 65px;
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #PageContainer {
@@ -79,5 +89,11 @@
     line-height: 25px;
     margin-top: 25.2px;
     margin-bottom: 8.4px;
+  }
+  #sitemapTitle {
+    font-size: 17px;
+  }
+  #sitemapContainer {
+    margin-top: 45px;
   }
 }
