--- a/Styles/Pages/Privacy.css
+++ b/Styles/Pages/Privacy.css
@@ -1,3 +1,8 @@
+#PageContainer {
+  max-width: 980px;
+  margin-bottom: 50px;
+  transition: all .35s ease;
+}
 #privacyTitle {
   height: 52px;
   font-size: 42px;
@@ -11,8 +16,8 @@
 }
 .privacySummary {
   height: 29px;
-  font-size: 21px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: 350;
   line-height: 29px;
   margin-left: auto;
   margin-right: auto;
@@ -21,6 +26,9 @@
 }
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
+  #PageContainer {
+    width: 692px;
+  }
   #privacyTitle {
     height: 25px;
     font-size: 34px;
@@ -31,11 +39,21 @@
 }
 /* 螢幕小於 734 */
 @media only screen and (max-width: 734px) {
+  #PageContainer {
+    width: 90%;
+  }
   #privacyTitle {
     height: 39px;
     margin-left: 0;
     font-size: 28px;
     margin-top: 35px;
     line-height: 39px;
+  }
+  .privacySummary {
+    height: 27px;
+    margin-left: 0;
+    font-size: 19px;
+    line-height: 27px;
+    margin-bottom: 19px;
   }
 }
