--- a/Styles/Pages/Terms.css
+++ b/Styles/Pages/Terms.css
@@ -6,9 +6,11 @@
 }
 #termsTitle {
   height: 52px;
-  font-size: 48px;
-  font-weight: 600;
+  font-size: 42px;
+  font-weight: 500;
   lie-height: 52px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 21.6px;
   color: rgb(29, 29, 31);
 }
@@ -23,6 +25,7 @@
 @media only screen and (max-width: 734px) {
   #PageContainer {
     width: 87.5%;
+    margin-left: 0;
     margin-top: 35px;
   }
 }
