--- a/Styles/Pages/Terms.css
+++ b/Styles/Pages/Terms.css
@@ -20,6 +20,12 @@
     width: 576.66px;
     margin-top: 50px;
   }
+  #termsTitle {
+    height: 44px;
+    font-size: 34px;
+    lie-height: 44px;
+    margin-bottom: 18px;
+  }
 }
 /* 螢幕小於 734 */
 @media only screen and (max-width: 734px) {
@@ -27,5 +33,12 @@
     width: 87.5%;
     margin-left: 0;
     margin-top: 35px;
+  }
+  #termsTitle {
+    height: 39px;
+    margin-left: 0;
+    font-size: 28px;
+    lie-height: 39px;
+    margin-bottom: 14.4px;
   }
 }
