--- a/Styles/Pages/Terms.css
+++ b/Styles/Pages/Terms.css
@@ -14,6 +14,14 @@
   margin-bottom: 21.6px;
   color: rgb(29, 29, 31);
 }
+#termsSummary {
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 43px;
+  color: rgb(29, 29, 31);
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #PageContainer {
@@ -40,5 +48,9 @@
     font-size: 28px;
     lie-height: 39px;
     margin-bottom: 14.4px;
+  }
+  #termsSummary {
+    margin-left: 0;
+    margin-bottom: 39px;
   }
 }
