--- a/Styles/Pages/Terms.css
+++ b/Styles/Pages/Terms.css
@@ -22,6 +22,13 @@
   margin-bottom: 43px;
   color: rgb(29, 29, 31);
 }
+.termsTitle2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: 50px;
+  margin-bottom: 10.8px;
+  color: rgb(29, 29, 31);
+}
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
   #PageContainer {
@@ -33,6 +40,10 @@
     font-size: 34px;
     lie-height: 44px;
     margin-bottom: 18px;
+  }
+  .termsTitle2 {
+    font-size: 21px;
+    margin-bottom: 9.45px;
   }
 }
 /* 螢幕小於 734 */
