--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -54,6 +54,13 @@ table {
 .syntaxComment {
   color: rgb(112, 127, 140);
 }
+/* 文章中程式碼裡的待輸入提示（藍底白字）*/
+.syntaxPlaceholder {
+  color: white;
+  padding: 0 2px;
+  border-radius: 5px;
+  background: rgb(0, 122, 255);
+}
 .blogPostImgContainer {
   padding: 0px;
   max-width: 980px;
