--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -11,10 +11,15 @@
   max-width: 1024px;
   transition: all .35s ease;
 }
-/* 寬螢幕上方導覽列二右方的「XcodeProject 搜索框」 */
+/* 寬螢幕上方導覽列二右方的「XcodeProject 搜索」表單 */
 #wideScreenSecondNavSearchForm {
   width: 234px;
   --bs-border-color: rgb(134, 134, 139);
+}
+/* 寬螢幕上方導覽列二右方的「XcodeProject 搜索」框 */
+#wideScreenSecondNavSearchBar {
+  font-size: 12px;
+  font-weight: 300;
 }
 /* 寬螢幕上方導覽列二右方的「XcodeProject 搜索」按鈕 */
 #wideScreenSecondNavSearchBtn {
